--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,8 +18,12 @@ body {
   align-items: center;  
 }
 .sidenav {
-  padding: 0 15px 0 10px;
+  padding: 0 15px 0 15px;
   min-width: 260px;
+
+  .mat-drawer-inner-container {
+    overflow-x: hidden;
+  }
 
   .param-field {
     display: flex;
@@ -28,7 +32,10 @@ body {
     align-items: center;
     label {
       flex: 1;
-      display: inline-block;      
+      display: inline-block;   
+      .label-dim {
+        color: #999;
+      }  
     }
     .val {
       flex: 1;
