--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,26 +22,18 @@
             <mat-slider id="mass" showTickMarks discrete min="50" max="100" step="10" class="val">
                 <input matSliderThumb [(ngModel)]="mass" >
             </mat-slider>
-        </div>        
-        <div class="param-field">
-            <label for="planet">Jump On</label>
-            <mat-select id="planet" [ngModel]="selectedBodyName" (ngModelChange)="onSelectedBodyChanged($event)" name="food" class="val">
-                <mat-option *ngFor="let body of celestial_bodies" [value]="body.name">
-                    {{body.name}}
-                </mat-option>
-            </mat-select>
-        </div>
+        </div>                
     </mat-drawer>
     <div class="sidenav-content" (resized)="resize()">
         <canvas #stage id="stage"></canvas>        
     </div>
 </mat-drawer-container>
 <div class="footer">
-    <button mat-raised-button color="primary" class="footer-button" (click)="addSquare()">
-        Add Square
+    <button mat-raised-button color="primary" class="footer-button" (click)="start()">
+       Start
     </button>
-    <button mat-raised-button color="primary" class="footer-button" (click)="clearAllSquares()">
-       Clear All
-    </button>
+    <button mat-raised-button color="primary" class="footer-button" (click)="stop()">
+        Stop
+     </button>
     <mat-slide-toggle [(ngModel)]="isSideNavOpen" [title]="isSideNavOpen?'Toggle to close Side Panel':'Toggle to open Side Panel'"></mat-slide-toggle>    
 </div> 
