--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         <p>Parameters</p>   
         <div class="param-field">            
             <label for="fps">FPS <span class="label-dim">[{{fps}}]</span></label>
-            <mat-slider id="fps" showTickMarks discrete min="30" max="60" step="30" class="val">
+            <mat-slider id="fps" showTickMarks discrete min="30" max="90" step="30" class="val">
                 <input matSliderThumb [(ngModel)]="fps" >
             </mat-slider>
         </div>        
@@ -22,7 +22,37 @@
             <mat-slider id="mass" showTickMarks discrete min="50" max="100" step="10" class="val">
                 <input matSliderThumb [(ngModel)]="mass" >
             </mat-slider>
-        </div>                
+        </div>        
+        <div class="param-field">            
+            <label for="trail">Trail Length <span class="label-dim">[{{trail}}]</span></label>
+            <mat-slider id="trail" showTickMarks discrete min="10" max="100" step="10" class="val">
+                <input matSliderThumb [ngModel]="trail" (ngModelChange)="onTrailLengthChanged($event)">
+            </mat-slider>
+        </div>   
+        <div class="param-field">            
+            <label for="num_of_balls"># Balls <span class="label-dim">[{{num_of_balls}}]</span></label>
+            <mat-slider id="num_of_balls" showTickMarks discrete min="1" max="10" step="1" class="val">
+                <input matSliderThumb [(ngModel)]="num_of_balls">
+            </mat-slider>
+        </div>
+        <div class="param-field">            
+            <label for="gravity">Gravity <span class="label-dim">[{{gravity}}]</span></label>
+            <mat-slider id="gravity" showTickMarks discrete min="0" max="1" step="0.1" class="val">
+                <input matSliderThumb [ngModel]="gravity" (ngModelChange)="onGravityChanged($event)">
+            </mat-slider>
+        </div>      
+        <div class="param-field">            
+            <label for="elasticity">Elasticity <span class="label-dim">[{{elasticity}}]</span></label>
+            <mat-slider id="elasticity" showTickMarks discrete min="0" max="1" step="0.1" class="val">
+                <input matSliderThumb [ngModel]="elasticity" (ngModelChange)="onElasticityChanged($event)">
+            </mat-slider>
+        </div> 
+        <div class="param-field">            
+            <label for="friction">Friction <span class="label-dim">[{{friction}}]</span></label>
+            <mat-slider id="friction" showTickMarks discrete min="0" max="0.06" step="0.002" class="val">
+                <input matSliderThumb [ngModel]="friction" (ngModelChange)="onFrictionChanged($event)">
+            </mat-slider>
+        </div> 
     </mat-drawer>
     <div class="sidenav-content" (resized)="resize()">
         <canvas #stage id="stage"></canvas>        
