--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar color="primary">
-    <span>Maria's Gravity Sim</span>
+    <span>Maria's Gravity Sim - {{mode === AppMode.EarthGravity ? 'Earth Gravity' : mode === AppMode.SpaceGravity ? 'Space Gravity' : ''}}</span>
     <span class="spacer"></span>
-    <button mat-icon-button matTooltip="EarthView" (click)="toggleMode(AppMode.EarthGravity)">
+    <button mat-icon-button matTooltip="Earth View" (click)="toggleMode(AppMode.EarthGravity)">
         <i class="fa-solid fa-earth-americas"></i>
     </button>
-    <button mat-icon-button matTooltip="SpaceView" (click)="toggleMode(AppMode.SpaceGravity)">
+    <button mat-icon-button matTooltip="Space View" (click)="toggleMode(AppMode.SpaceGravity)">
         <i class="fa-solid fa-meteor"></i> 
     </button>
     <button mat-icon-button matTooltip="About" (click)="toggleMode(AppMode.About)">
@@ -19,13 +19,7 @@
             <mat-slider id="fps" showTickMarks discrete min="30" max="90" step="30" class="val">
                 <input matSliderThumb [(ngModel)]="fps" >
             </mat-slider>
-        </div>        
-        <div class="param-field">            
-            <label for="mass">Mass <span class="label-dim">[{{mass}}kg]</span></label>
-            <mat-slider id="mass" showTickMarks discrete min="50" max="100" step="10" class="val">
-                <input matSliderThumb [(ngModel)]="mass" >
-            </mat-slider>
-        </div>        
+        </div>                    
         <div class="param-field">            
             <label for="trail">Trail Length <span class="label-dim">[{{trail}}]</span></label>
             <mat-slider id="trail" showTickMarks discrete min="10" max="100" step="10" class="val">
@@ -67,20 +61,20 @@
             </mat-slider>
         </div>        
         <div class="param-field">            
-            <label for="mass">Mass <span class="label-dim">[{{mass}}kg]</span></label>
-            <mat-slider id="mass" showTickMarks discrete min="50" max="100" step="10" class="val">
-                <input matSliderThumb [(ngModel)]="mass" >
+            <label for="mass">Sun Mass <span class="label-dim">[{{mass}}]</span></label>
+            <mat-slider id="mass" showTickMarks discrete min="1" max="5" step="1" class="val">
+                <input matSliderThumb [ngModel]="mass" (ngModelChange)="onSunMassChanged($event)" >
             </mat-slider>
-        </div>        
+        </div>           
         <div class="param-field">            
             <label for="trail">Trail Length <span class="label-dim">[{{trail}}]</span></label>
-            <mat-slider id="trail" showTickMarks discrete min="10" max="100" step="10" class="val">
+            <mat-slider id="trail" showTickMarks discrete min="10" max="500" step="10" class="val">
                 <input matSliderThumb [ngModel]="trail" (ngModelChange)="onTrailLengthChanged($event)">
             </mat-slider>
         </div>   
         <div class="param-field">            
             <label for="num_of_balls"># Balls <span class="label-dim">[{{num_of_balls}}]</span></label>
-            <mat-slider id="num_of_balls" showTickMarks discrete min="1" max="10" step="1" class="val">
+            <mat-slider id="num_of_balls" showTickMarks discrete min="1" max="100" step="1" class="val">
                 <input matSliderThumb [(ngModel)]="num_of_balls">
             </mat-slider>
         </div>
