--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-    <span>Maria's Gravity Sim - {{mode === AppMode.EarthGravity ? 'Earth Gravity' : mode === AppMode.SpaceGravity ? 'Space Gravity' : ''}}</span>
+    <span>Maria's Gravity Sim - {{mode === AppMode.EarthGravity ? 'Earth Gravity' : mode === AppMode.SpaceGravity ? 'Space Gravity' : 'About'}}</span>
     <span class="spacer"></span>
     <button mat-icon-button matTooltip="Earth View" (click)="toggleMode(AppMode.EarthGravity)">
         <i class="fa-solid fa-earth-americas"></i>
@@ -13,7 +13,7 @@
 </mat-toolbar>
 <mat-drawer-container class="content" autosize *ngIf="mode!==AppMode.About" [ngSwitch]="mode">
     <mat-drawer #drawer class="sidenav" mode="side" [opened]="isSideNavOpen" *ngSwitchCase="AppMode.EarthGravity">
-        <p>Parameters</p>   
+        <p style="padding-top: 8px">Parameters</p>   
         <div class="param-field">            
             <label for="fps">FPS <span class="label-dim">[{{fps}}]</span></label>
             <mat-slider id="fps" showTickMarks discrete min="30" max="90" step="30" class="val">
@@ -46,14 +46,14 @@
         </div> 
         <div class="param-field">            
             <label for="friction">Friction <span class="label-dim">[{{friction}}]</span></label>
-            <mat-slider id="friction" showTickMarks discrete min="0" max="0.06" step="0.002" class="val">
+            <mat-slider id="friction" showTickMarks discrete min="0" max="0.06" step="0.02" class="val">
                 <input matSliderThumb [ngModel]="friction" (ngModelChange)="onFrictionChanged($event)">
             </mat-slider>
         </div> 
     </mat-drawer>
 
     <mat-drawer #drawer class="sidenav" mode="side" [opened]="isSideNavOpen" *ngSwitchCase="AppMode.SpaceGravity">
-        <p>Parameters</p>   
+        <p style="padding-top: 8px">Parameters</p>   
         <div class="param-field">            
             <label for="fps">FPS <span class="label-dim">[{{fps}}]</span></label>
             <mat-slider id="fps" showTickMarks discrete min="30" max="90" step="30" class="val">
@@ -91,11 +91,17 @@
     </div>
 </mat-drawer-container>
 <div class="footer" *ngIf="mode!==AppMode.About;else elseBlock;">
-    <button mat-raised-button color="primary" class="footer-button" [disabled]="playing" (click)="start()">
-       Start
+    <button mat-raised-button color="primary" class="footer-button" [disabled]="symState!==SymState.Stopped" (click)="start()">
+        Start Simulator
     </button>
-    <button mat-raised-button color="primary" class="footer-button" [disabled]="!playing" (click)="stop()">
-        Stop
+    <button mat-raised-button color="primary" class="footer-button" *ngIf="symState===SymState.Playing" (click)="pause()">
+        Pause Simulator
+     </button>
+     <button mat-raised-button color="primary" class="footer-button" *ngIf="symState===SymState.Paused" (click)="resume()">
+        Resume Simulator
+     </button>
+    <button mat-raised-button color="primary" class="footer-button" [disabled]="symState===SymState.Stopped" (click)="stop()">
+        Stop Simulator
      </button>
     <mat-slide-toggle [(ngModel)]="isSideNavOpen" [title]="isSideNavOpen?'Toggle to close Side Panel':'Toggle to open Side Panel'"></mat-slide-toggle>    
 </div>
