--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,37 +15,37 @@
     <mat-drawer #drawer class="sidenav" mode="side" [opened]="isSideNavOpen" *ngSwitchCase="AppMode.EarthGravity">
         <p style="padding-top: 8px">Parameters</p>   
         <div class="param-field">            
-            <label for="fps">FPS <span class="label-dim">[{{fps}}]</span></label>
+            <label for="fps" matTooltip="Animation Frames Per Second">FPS <span class="label-dim">[{{fps}}]</span></label>
             <mat-slider id="fps" showTickMarks discrete min="30" max="90" step="30" class="val">
                 <input matSliderThumb [(ngModel)]="fps" >
             </mat-slider>
         </div>                    
         <div class="param-field">            
-            <label for="trail">Trail Length <span class="label-dim">[{{trail}}]</span></label>
+            <label for="trail" matTooltip="Number of trailing dots following a scene object">Trail Length <span class="label-dim">[{{trail}}]</span></label>
             <mat-slider id="trail" showTickMarks discrete min="10" max="100" step="10" class="val">
                 <input matSliderThumb [ngModel]="trail" (ngModelChange)="onTrailLengthChanged($event)">
             </mat-slider>
         </div>   
         <div class="param-field">            
-            <label for="num_of_balls"># Balls <span class="label-dim">[{{num_of_balls}}]</span></label>
+            <label for="num_of_balls" matTooltip="Number of ball for simulation"># Balls <span class="label-dim">[{{num_of_balls}}]</span></label>
             <mat-slider id="num_of_balls" showTickMarks discrete min="1" max="10" step="1" class="val">
                 <input matSliderThumb [(ngModel)]="num_of_balls">
             </mat-slider>
         </div>
         <div class="param-field">            
-            <label for="gravity">Gravity <span class="label-dim">[{{gravity}}]</span></label>
+            <label for="gravity" matTooltip="Gravity strength">Gravity <span class="label-dim">[{{gravity}}]</span></label>
             <mat-slider id="gravity" showTickMarks discrete min="0" max="1" step="0.1" class="val">
                 <input matSliderThumb [ngModel]="gravity" (ngModelChange)="onGravityChanged($event)">
             </mat-slider>
         </div>      
         <div class="param-field">            
-            <label for="elasticity">Elasticity <span class="label-dim">[{{elasticity}}]</span></label>
+            <label for="elasticity" matTooltip="Energy preseved after bouncing of the ground">Elasticity <span class="label-dim">[{{elasticity}}]</span></label>
             <mat-slider id="elasticity" showTickMarks discrete min="0" max="1" step="0.1" class="val">
                 <input matSliderThumb [ngModel]="elasticity" (ngModelChange)="onElasticityChanged($event)">
             </mat-slider>
         </div> 
         <div class="param-field">            
-            <label for="friction">Friction <span class="label-dim">[{{friction}}]</span></label>
+            <label for="friction" matTooltip="Horizontal friction force strength">Friction <span class="label-dim">[{{friction}}]</span></label>
             <mat-slider id="friction" showTickMarks discrete min="0" max="0.06" step="0.02" class="val">
                 <input matSliderThumb [ngModel]="friction" (ngModelChange)="onFrictionChanged($event)">
             </mat-slider>
