--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,7 +60,7 @@ body {
   padding: 15px 15px;
 }
 .footer {
-  background-color: lightgrey;
+  background-color: rgb(161, 32, 83);
   border-top: 1px solid #ccc;
   flex: 0 60px;
   padding: 0 15px;
